Dashboard topbar default selection, remove ---, and sidebar added language switch

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -4,7 +4,9 @@
 		"Dashboard": "Dashboard",
 		"ToolBox": "ToolBox",
 		"Spin My Luck": "Spin My Luck",
-		"Lucky Book": "Lucky Book"
+		"Lucky Book": "Lucky Book",
+		"Setting": "Setting",
+		"Language": "English"
 	},
 	"Right": {
 		"Special Draw Date": "Special Draw Date",
