--- a/src/i18n/locales/my.json
+++ b/src/i18n/locales/my.json
@@ -4,7 +4,9 @@
 		"Dashboard": "Pemuka",
 		"ToolBox": "Alatan",
 		"Spin My Luck": "Putaran Bertuah",
-		"Lucky Book": "Buku Bertuah"
+		"Lucky Book": "Buku Bertuah",
+		"Setting": "Tetapan",
+		"Language": "Malay"
 	},
 	"Right": {
 		"Special Draw Date": "Tarikh Cabutan Khas",
