--- a/src/i18n/locales/zw.json
+++ b/src/i18n/locales/zw.json
@@ -4,7 +4,9 @@
 		"Dashboard": "目录",
 		"ToolBox": "工具箱",
 		"Spin My Luck": "好运转转转",
-		"Lucky Book": "好运簿"
+		"Lucky Book": "好运簿",
+		"Setting": "设定",
+		"Language": "华语"
 	},
 	"Right": {
 		"Special Draw Date": "特别开奖日期",
