Update Atas 4D Website

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -47,6 +47,7 @@
 		"ALL": "All",
 		"Found": "Found",
 		"result": "result",
-		"for": "for"
+		"for": "for",
+		"No_Result": "No Result Found For This Range"
 	}
 }
