--- a/src/i18n/locales/zw.json
+++ b/src/i18n/locales/zw.json
@@ -58,6 +58,7 @@
 		"Found": "找到",
 		"result": "个相关的",
 		"for": "结果",
-		"No_Result": "未找到此范围的结果"
+		"No_Result": "未找到此范围的结果",
+		"No_results_found": "没有找到结果。"
 	}
 }
